syntax = "proto3";
package rbac.plugins.gloo.solo.io;

option go_package = "github.com/solo-io/solo-projects/projects/gloo/pkg/api/v1/plugins/rbac";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;
// TODO: should we add standard claims to the jwt principal?

// A JWT principal. To use this, JWT plugin MUST be enabled.
message JWTPrincipal{
    // Set of claims that make up this principal. Commonly, the 'iss' and 'sub' or 'email' claims are used.
    // all claims must be present on the JWT.
    map<string, string> claims = 1;
    // Verify that the JWT came from a specific provider. This usually can be left empty
    // and a provider will be chosen automatically.
    string provider = 2;
}

// An RBAC principal - the identity enitity (usually a user or a service account).
message Principal {
    JWTPrincipal jwt_principal = 1;
}

// What permissions should be granted. An empty field means allow-all.
// If more than one field is added, all of them need to match.
message Permissions {
    // Paths that have this prefix will be allowed.
    string path_prefix = 1;
    // What http methods (GET, POST, ...) are allowed.
    repeated string methods = 2;
}

message Policy {
    // Principals in this policy.
    repeated Principal principals = 1;
    // Permissions granted to the principals.
    Permissions permissions = 2;
}

message Settings {
    // Require RBAC for all vhosts. A vhost without an RBAC policy set will fallback to a deny-all policy.
    bool require_rbac = 1;
}

message Config {
    // Named policies to apply.
    map<string, Policy> policies = 1;
}

message VhostExtension {
    Config config = 1;
}

message RouteExtension {
    oneof route{
        // Disable RBAC checks on this route. This is useful to allow access to static resources \ login page without RBAC checks.
        bool disable = 1;
        Config config = 2;
    }
}
